tests/invalid/UnionType_Invalid_22.whiley
type LinkedList is null | { int data }

function length(LinkedList list) -> int:
    return list.data